--- a/posts/one-more-post.mdx
+++ b/posts/one-more-post.mdx
@@ -1,7 +1,15 @@
 ---
-title: Mental models for designers
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
-date: Jun 2 2021
+title: Technologies i work with
+description: "i enjoy working with react js • next js and crafting amazing front-end experiences: also have experience with a variety  of back-end technologies."
+date: Jun 2 2022
 ---
-
-This is an example post. There's another one [here](/posts/example-post).
+ Technologies include 
+Docker 
+Kubernetes 
+IBM watson
+Docker 
+Vue 
+Nextjs
+React
+Flask 
+Node
