--- a/posts/another-post-in-the-wall.mdx
+++ b/posts/another-post-in-the-wall.mdx
@@ -1,11 +1,7 @@
 ---
-title: How to create SVG-ready icon symbols in Sketch PART 1
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
+title: I build high performance AI bots
+description: "you can hire me , and also buy me a coffee ☕️ ....
 date: May 4 2021
 ---
 
-This is an example post, with a [link](https://nextjs.org) and a React component:
-
-The title and description are pulled from the MDX file and processed using `gray-matter`. Additionally, links are rendered using a custom component passed to `next-mdx-remote`.
-
-Go back [home](/).
+im working on a few open source project link in my social directory , with a [link](https://nextjs.org) and a React component: [link] https://mobile.twitter.com/paigelasgidi
