--- a/posts/another-post-in-the-wall.mdx
+++ b/posts/another-post-in-the-wall.mdx
@@ -4,4 +4,4 @@ description: "you can hire me , and also buy me a coffee ☕️ ....
 date: May 4 2021
 ---
 
-im working on a few open source project link in my social directory , with a [link](https://nextjs.org) and a React component: [link] https://mobile.twitter.com/paigelasgidi
+im working on a few open source project link in my social directory ,  [link](https://nextjs.org) and a React component: [link] https://mobile.twitter.com/paigelasgidi
