--- a/posts/another-post-in-the-wall.mdx
+++ b/posts/another-post-in-the-wall.mdx
@@ -1,6 +1,6 @@
 ---
 title: I build high performance AI bots
-description: "you can hire me , and also buy me a coffee ☕️ ....
+description: you can hire me , and also buy me a coffee ☕️ ....
 date: May 4 2021
 ---
 
