--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -1,3 +1,5 @@
 ---
 title: tech posts 
-description: " check out my tech post update
+description: check out my tech post update
+date: june 2022
+___
