--- a/posts/another-post-in-the-wall.mdx
+++ b/posts/another-post-in-the-wall.mdx
@@ -1,7 +1,7 @@
 ---
 title: I build high performance AI bots
-description: you can hire me , and also buy me a coffee ☕️ ....
+description: "you can hire me , and also buy me a coffee"
 date: May 4 2021
 ---
 
-im working on a few open source project link in my social directory ,   [link]https://mobile.twitter.com/paigelasgidi
+im working on a few open source project link in my social directory , [link]https://mobile.twitter.com/paigelasgidi
